Utils and final touches funcs finished

--- a/DataStructuresYossef/DataStructuresYossef.vcxproj
+++ b/DataStructuresYossef/DataStructuresYossef.vcxproj
@@ -129,7 +129,9 @@
   <ItemGroup>
     <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="Queue.cpp" />
+    <ClCompile Include="Stack.cpp" />
     <ClCompile Include="tester.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
