--- a/DataStructuresYossef/DataStructuresYossef.vcxproj.filters
+++ b/DataStructuresYossef/DataStructuresYossef.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="tester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Stack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Queue.h">
